--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 
 <body>
+
     <section id="calculator">
+
         <div id="calculator-container">
+            <div class="container">
+                <img src="imagem/imgem_topo.png" style="max-width: 100%; border-radius: 8px;" alt="imagem cabeçalho">
+            </div>
             <div id="calculator-title">
-                <img src="imagem/LOGO_PARAIBA_02.png" alt="Logo_paraiba" />
-                <h2>Calculadora</h2>
+
+                <img src="" alt="" />
+                <h2></h2>
             </div>
 
             <form id="calculator-form">
