alterando o layout de cores do projeto

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <section id="calculator">
 
         <div id="calculator-container">
-            <div class="container">
-                <img src="imagem/imgem_topo.png" style="max-width: 100%; border-radius: 8px;" alt="imagem cabeçalho">
-            </div>
+            <!--<div class="container">
+                <img src="" style="max-width: 100%; border-radius: 8px;" alt="imagem cabeçalho">
+            </div>-->
             <div id="calculator-title">
 
-                <img src="" alt="" />
-                <h2></h2>
+                <img src="imagem/LOGO_PARAIBA_02.png" alt="logo paraiba" />
+                <h2>Calculadora</h2>
             </div>
 
             <form id="calculator-form">
